exlude partials.css

--- a/html/less/home.less
+++ b/html/less/home.less
@@ -1,4 +1,5 @@
 
+@import "variable";
 /************************************/
 /* Home Body Main styling Starts */
 /************************************/
