--- a/html/less/variable.less
+++ b/html/less/variable.less
@@ -1,4 +1,4 @@
-/************************************/
+﻿/************************************/
 /* Variables Styling Starts */
 /************************************/
 @white: #ffffff; //white
